--- a/index1.html
+++ b/index1.html
@@ -2,19 +2,25 @@
 
 <html lang="en">
 
-  <head>
+<head>
 
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  </head>
+</head>
 
-  <body>
+<body>
 
-    <!--Navigation-Bar-->
-    <div class=" Top-Navigation-Bar">
-        <p>"This is a Top Navigation Bar"</p>
-    </div>
-      
-  </body>
+  <!--Navigation-Bar-->
+  <div class=" Top-Navigation-Bar">
+    <p>"This is a Top Navigation Bar"</p>
+  </div>
+
+  <!--footer-link-->
+  <div class=" Top-Navigation-Bar">
+    <p>"This is a footer-link"</p>
+  </div>
+
+</body>
+
 </html>
