Fixes footer menu

--- a/index1.html
+++ b/index1.html
@@ -16,5 +16,11 @@
         <p>"This is a Top Navigation Bar"</p>
     </div>
       
+    <!--"Footer-menu"-->
+    <div class=" footer-menu">
+      <p>"This is a Footer Menu"</p>
+    </div>
+
   </body>
+  
 </html>
