fixes footer menu to index2.html

--- a/index2.html
+++ b/index2.html
@@ -107,5 +107,9 @@
         </div>
       </div>
     </div>
+  <!--"Footer-menu"-->
+  <div class=" footer-menu">
+    <p>"This is a Footer Menu"</p>
+  </div>
   </body>
 </html>
