fixed footer link for index2.html

--- a/index2.html
+++ b/index2.html
@@ -107,5 +107,9 @@
         </div>
       </div>
     </div>
+<!--footer-link-->
+<div class=" footer-link">
+  <p>"This is a footer-link"</p>
+</div>
   </body>
 </html>
